sylvia/tests/ui/attributes/features/invalid_params.stderr
error: Invalid feature.
       = note: Expected `#[sv::features(replies)];`.
 --> tests/ui/attributes/features/invalid_params.rs:9:16
  |
9 | #[sv::features(unknown_parameter)]
  |                ^^^^^^^^^^^^^^^^^
